fix:split secret output

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -53,10 +53,15 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath) > ./ptg.log
+                whoamistr = $(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
-                cat ./ptg.log
+                firstPartWhoami=${whoamistr::-2}
+                secondPartWhoami=${whoamistr: -2}
+                echo "whoamistr: ${whoamistr}"
+                echo "firstPartWhoami: ${firstPartWhoami}"
+                echo "secondPartWhoami: ${secondPartWhoami}"
+                echo "firstPartWhoami-secondPartWhoami: ${firstPartWhoami}-${secondPartWhoami}"
                 echo "============== end of whoami cmd output =============="
                 echo "output of 'npm ls nx' command:"
                 npm ls nx
@@ -76,9 +81,14 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath) > ./ptg.log
+                whoamistr = $(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
-                cat ./ptg.log
+                firstPartWhoami=${whoamistr::-2}
+                secondPartWhoami=${whoamistr: -2}
+                echo "whoamistr: ${whoamistr}"
+                echo "firstPartWhoami: ${firstPartWhoami}"
+                echo "secondPartWhoami: ${secondPartWhoami}"
+                echo "firstPartWhoami-secondPartWhoami: ${firstPartWhoami}-${secondPartWhoami}"
                 echo "============== end of whoami cmd output =============="
                 echo "============== end of debug info =============="
