--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -9,7 +9,7 @@ resources:
         JAVA_OPTS: "-Xmx5g -Xms5g"
 
 variables:
-  performNpmAuthenticate: false
+  performNpmAuthenticate: true
   # system.debug: true
 
 pool:
@@ -48,7 +48,7 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                whoamistr=$(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
+                whoamistr=$(npm whoami)
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
                 firstPartWhoami=${whoamistr::-2}
@@ -77,7 +77,7 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                whoamistr=$(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
+                whoamistr=$(npm whoami)
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
                 firstPartWhoami=${whoamistr::-2}
