--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -9,7 +9,7 @@ resources:
         JAVA_OPTS: "-Xmx5g -Xms5g"
 
 variables:
-  performNpmAuthenticate: true
+  performNpmAuthenticate: false
   # system.debug: true
 
 pool:
@@ -38,9 +38,11 @@ stages:
               script: |
                 # output npm info
                 echo "============= start of debug info ============="
-                echo "Agent.TempDirectory ==> $(Agent.TempDirectory)"
                 echo "pwd ==> $(pwd)"
+                echo "Agent.TempDirectory ==> $(Agent.TempDirectory)"
                 ls -lah $(Agent.TempDirectory)
+                echo "System.DefaultWorkingDirectory ==> $(System.DefaultWorkingDirectory)"
+                ls -lah ${SYSTEM_DEFAULTWORKINGDIRECTORY}
                 echo "get npm and node info"
                 npm --version
                 node -v
@@ -48,7 +50,7 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                whoamistr=$(npm whoami)
+                whoamistr=$(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
                 firstPartWhoami=${whoamistr::-2}
@@ -77,7 +79,7 @@ stages:
                 echo "============= start of npm config file contents ============="
                 cat $(DownloadNpmrcFile.secureFilePath)
                 echo "============== end of npm config file contents =============="
-                whoamistr=$(npm whoami)
+                whoamistr=$(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
                 echo "whoami return: $?"
                 echo "============= start of whoami cmd output ============="
                 firstPartWhoami=${whoamistr::-2}
