--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -9,7 +9,7 @@ resources:
         JAVA_OPTS: "-Xmx5g -Xms5g"
 
 variables:
-  performNpmAuthenticate: true
+  performNpmAuthenticate: false
   # system.debug: true
 
 pool:
@@ -80,6 +80,16 @@ stages:
             inputs:
               workingFile: $(System.DefaultWorkingDirectory)/.npmrc
               customEndpoint: "Artifactory NPM"
+          - task: Bash@3
+            name: NpmPublish
+            displayName: 'npm_publish'
+            inputs:
+              targetType: 'inline'
+              script: |
+                echo "============= start of debug info ============="
+                echo "run generate.sh script"
+                ./generate.sh
+                echo "============= end of debug info ============="
           - task: Bash@3
             name: NpmWhoAmI
             displayName: 'npm_whoami'
