fix: activate dynamic version from pipeline

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -10,7 +10,7 @@ resources:
 
 variables:
   performNpmAuthenticate: false
-  dynamicVersion: false
+  dynamicVersion: true
   # system.debug: true
 
 pool:
