fix: try allowing same version for npm

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -10,7 +10,7 @@ resources:
 
 variables:
   performNpmAuthenticate: false
-  dynamicVersion: true
+  dynamicVersion: false
   # system.debug: true
 
 pool:
