add grep with awk

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -60,7 +60,7 @@ stages:
                 cat $(DownloadSettingsFile.secureFilePath)
                 echo "============== end of settings file contents =============="
                 echo "============= start grep for username in settings file contents ============="
-                grep username $(DownloadSettingsFile.secureFilePath)
+                grep username $(DownloadSettingsFile.secureFilePath) | awk -F ">" '{print $2}' | awk -F "<" '{print $1}'
                 echo "============== end of grep for username in settings file contents =============="
                 whoamistr=$(npm whoami --userconfig $(DownloadNpmrcFile.secureFilePath))
                 echo "whoami specifying npm userconfig file return: $?"
